Fixed results not expanding on iOS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,3 +29,7 @@ h1 {
     padding-right: 0.5ch;
     vertical-align: text-bottom;
 }
+
+.panel-heading {
+    cursor: pointer;
+}
